--- a/src/views/category.ejs
+++ b/src/views/category.ejs
@@ -64,7 +64,7 @@
                                     </h4>
                                     <div class="home-product-item__price">
                                         <span class="home-product-item__price-current">
-                                            <%=products[i].price %>
+                                            <%=products[i].price %> VND
                                         </span>
                                     </div>
 
