--- a/src/views/orders-manager.ejs
+++ b/src/views/orders-manager.ejs
@@ -27,12 +27,12 @@
         <a class="cart-item" alt="<%= orders[i].name%>" >
           <img src= "<%= orders[i].imagePath%>" >
             <div class = "cart-info">
-              <div class="cart-item-info">
-                <h2><%= orders[i].name%></h2>
+              <div class="cart-item-info" style="font-size: 20px;">
+                <h2 style="font-size: 25px;"><%= orders[i].name%></h2>
                 <p>Số lượng: <%= orders[i].Orders[0].quantity %> </p>
                 <p>Email: <%= orders[i].Orders[0].User.email %> </p>
               </div>
-              <p class="total">Thành tiền: <%= orders[i].Orders[0].totalPrice %> </p>
+              <p class="total">Thành tiền: <%= orders[i].Orders[0].totalPrice %> VND</p>
           </div>
           
         </a>
